1.5/_sources/modules/generated/sklearn.feature_selection.RFE.rst.txt
RFE
===

.. currentmodule:: sklearn.feature_selection

.. autoclass:: RFE
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.RFE sklearn.feature_selection.RFE.__init__ sklearn.feature_selection.RFE.decision_function sklearn.feature_selection.RFE.fit sklearn.feature_selection.RFE.fit_transform sklearn.feature_selection.RFE.get_feature_names_out sklearn.feature_selection.RFE.get_metadata_routing sklearn.feature_selection.RFE.get_params sklearn.feature_selection.RFE.get_support sklearn.feature_selection.RFE.inverse_transform sklearn.feature_selection.RFE.predict sklearn.feature_selection.RFE.predict_log_proba sklearn.feature_selection.RFE.predict_proba sklearn.feature_selection.RFE.score sklearn.feature_selection.RFE.set_output sklearn.feature_selection.RFE.set_params sklearn.feature_selection.RFE.transform 
   :add-heading: Gallery examples
   :heading-level: -