1.7/_sources/modules/generated/sklearn.feature_selection.RFE.rst.txt
RFE
===

.. currentmodule:: sklearn.feature_selection

.. autoclass:: RFE
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.feature_selection.RFE sklearn.feature_selection.RFE.__delattr__ sklearn.feature_selection.RFE.__dir__ sklearn.feature_selection.RFE.__eq__ sklearn.feature_selection.RFE.__format__ sklearn.feature_selection.RFE.__ge__ sklearn.feature_selection.RFE.__getattribute__ sklearn.feature_selection.RFE.__getstate__ sklearn.feature_selection.RFE.__gt__ sklearn.feature_selection.RFE.__hash__ sklearn.feature_selection.RFE.__init__ sklearn.feature_selection.RFE.__init_subclass__ sklearn.feature_selection.RFE.__le__ sklearn.feature_selection.RFE.__lt__ sklearn.feature_selection.RFE.__ne__ sklearn.feature_selection.RFE.__new__ sklearn.feature_selection.RFE.__reduce__ sklearn.feature_selection.RFE.__reduce_ex__ sklearn.feature_selection.RFE.__repr__ sklearn.feature_selection.RFE.__setattr__ sklearn.feature_selection.RFE.__setstate__ sklearn.feature_selection.RFE.__sizeof__ sklearn.feature_selection.RFE.__sklearn_clone__ sklearn.feature_selection.RFE.__sklearn_tags__ sklearn.feature_selection.RFE.__str__ sklearn.feature_selection.RFE.__subclasshook__ sklearn.feature_selection.RFE._build_request_for_signature sklearn.feature_selection.RFE._fit sklearn.feature_selection.RFE._get_default_requests sklearn.feature_selection.RFE._get_doc_link sklearn.feature_selection.RFE._get_metadata_request sklearn.feature_selection.RFE._get_param_names sklearn.feature_selection.RFE._get_params_html sklearn.feature_selection.RFE._get_support_mask sklearn.feature_selection.RFE._html_repr sklearn.feature_selection.RFE._repr_html_inner sklearn.feature_selection.RFE._repr_mimebundle_ sklearn.feature_selection.RFE._transform sklearn.feature_selection.RFE._validate_params sklearn.feature_selection.RFE.decision_function sklearn.feature_selection.RFE.fit sklearn.feature_selection.RFE.fit_transform sklearn.feature_selection.RFE.get_feature_names_out sklearn.feature_selection.RFE.get_metadata_routing sklearn.feature_selection.RFE.get_params sklearn.feature_selection.RFE.get_support sklearn.feature_selection.RFE.inverse_transform sklearn.feature_selection.RFE.predict sklearn.feature_selection.RFE.predict_log_proba sklearn.feature_selection.RFE.predict_proba sklearn.feature_selection.RFE.score sklearn.feature_selection.RFE.set_output sklearn.feature_selection.RFE.set_params sklearn.feature_selection.RFE.transform 
   :add-heading: Gallery examples
   :heading-level: -